# cleanroom

./: .gitignore  Dockerfile  README.md  docker-compose.yml  knowledge-bank.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cleanroom/: __init__.py  config.py  main.py  security.py
cleanroom/api/: health.py  observability.py  sessions.py  stream.py
cleanroom/container/: __init__.py  boot.py  manager.py  models.py  network.py  ports.py  registry.py
cleanroom/proxy/: tor.py
cleanroom/stream/: adb.py  proxy.py  scrcpy.py
cleanroom/watchdog/: __init__.py  ttl.py
docker/tor-sidecar/: Dockerfile
docker/tor-sidecar/tor/: start.sh  tinyproxy.conf  torrc
infra/: kernel-modules.conf  setup.sh  sysctl.conf  zram.service
infra/apparmor/: cleanroom-container
tests/e2e/: __init__.py  conftest.py  test_android_session.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_container_manager.py  test_network.py  test_tor_sidecar.py
tests/unit/: __init__.py  test_adb.py  test_boot_pipeline.py  test_config.py  test_ports.py  test_registry.py  test_security.py  test_watchdog.py
